fix truncated retweets

--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,24 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+img[src=""] {
+  display: none;
+}
+
+/* loader */
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid#2b563c; 
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
  .quote-container{
    width: auto;
    max-width: 900px;
